FOF 3.5.4
================================================================================
~ Update the CLI application for Joomla 4 Beta 1
# [HIGH] DateDecorator fails to call correctly certain DateTime methods, including getTimezone() and diff(), returning invalid results

FOF 3.5.3
================================================================================
~ The custom_css option now applies to all renderers
~ Optimized the way the default media query is determined
~ Improve the CacheCleaner helper

FOF 3.5.2
================================================================================
+ Blade: bust OPcode cache when writing a compiled template file [gh-687]
+ Blade: do not cache compiled files when Debug Site is set to Yes, forcing recompilation during site development
+ Platform abstraction for setting / getting script parameters
~ Alternate class inclusion for JHtml helpers to work around Joomla bugs [admintools/222]
# [HIGH] Template overrides for module and plugin view templates would not work
# [HIGH] View templates were always loaded from this side of the application, ignoring 'site:' and 'admin:' prefixes
# [LOW] Blade compiler would still refuse to execute when the PHP Tokenizer extension is disabled

FOF 3.5.1
================================================================================
- Removed Magic Quotes GPC handling since we no longer support PHP 5.3 or earlier
~ FEF Renderer throws deprecated notice in PHP 7.4
~ PHP 7.4 warning when AJAX reordering is not available

FOF 3.5.0
================================================================================
+ Base CLI script, compatible with Joomla! 3.7 and later, Joomla 4.0
~ Minimum requirements increased to PHP 5.6 and Joomla! 3.7

FOF 3.4.7
================================================================================
+ Support for Joomla 4 centralized Download Key management of paid extensions in its Update Sites page

FOF 3.4.6