@@ -11,6 +11,7 @@ use Exception;
 use FOF30\Container\Container;
 use FOF30\Date\Date;
 use FOF30\Input\Input;
+use Joomla\CMS\User\User;
 use Joomla\Registry\Registry;
 use JsonSerializable;
 
@@ -375,10 +376,11 @@ interface PlatformInterface
 	 * @param   string|array  $title      A title, or an array of additional fields to add to the log entry
 	 * @param   string        $logText    The translation key to the log text
 	 * @param   string        $extension  The name of the extension logging this entry
+	 * @param   User|null     $user       The user the action is being logged for
 	 *
 	 * @return  void
 	 */
-	public function logUserAction($title, $logText, $extension);
+	public function logUserAction($title, $logText, $extension, $user = null);
 
 	/**
 	 * Returns the root URI for the request.
