@@ -2,6 +2,7 @@ FOF 3.5.4
 ================================================================================
 ~ Update the CLI application for Joomla 4 Beta 1
 # [HIGH] DateDecorator fails to call correctly certain DateTime methods, including getTimezone() and diff(), returning invalid results
+# [MEDIUM] Action Log plugins don't work under Joomla 4
 
 FOF 3.5.3
 ================================================================================
